--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,40 +1,10 @@
+spring.application.name=MIMS
+server.port=8080
 # Database Configuration
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://124.43.4.239\\sql;encrypt=true;trustServerCertificate=true;databaseName=KingsLive
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mims?createDatabaseIfNotExist=true
+#&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/MIMS?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-# Thymeleaf Configuration
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-#management.endpoints.web.exposure.include=*
-#spring.security.user.name=admin
-#spring.security.user.password=admin
-server.port=8080
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
